added bg image, attribute

--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
   <body>
     <section class="logo-container">
       <div class="logo-container">
-        <img src="#" alt="Odin Pic" />
+        <img src="bg-tree.jpg" alt="Odin Pic" />
         <span>ODIN</span>
       </div>
-      <span class="photo-attribute">Photo by:</span>
+      <span class="photo-attribute"
+        >Photo by
+        <a
+          href="https://unsplash.com/@borndead13?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+          >Bruno Guerrero</a
+        >
+        on
+        <a
+          href="https://unsplash.com/photos/a-black-and-white-photo-of-a-pine-tree-iAV2AShjAAg?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+          >Unsplash</a
+        >
+      </span>
     </section>
 
     <section class="text-container">
