logo okay, moving on to form styling next

--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up Form</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="logo-container">
-      <div class="logo-container">
-        <img src="bg-tree.jpg" alt="Odin Pic" />
-        <span>ODIN</span>
+      <div class="odin-container">
+        <!-- <img src="bg-tree.jpg" alt="Odin Pic" /> -->
+        <img id="odin-logo" src="odin-lined.png" alt="Odin Project Logo" />
+        <spa class="odin-logo-text">ODIN</span>
       </div>
       <span class="photo-attribute"
         >Photo by
