added bg color to form side, to help layout

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </label>
         </form>
       </div>
-      <button>Creat Account</button>
+      <button>Create Account</button>
 
       <span>Already have an account? Log in</span>
     </section>
